<resources>
    <string name="app_name">AND_SYNRGY 7_Surya Luqman Fathulloh_Challenge Chapter2</string>
    <string name="tip_time">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="ok">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="gambar_mail">Gambar_mail</string>
</resources>